<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory android:title="@string/image_layers" android:key="image_layers">
        <ListPreference android:title="@string/image_layers_preference_title" android:key="image_layers_preference" android:summary="@string/image_layers_preference_summary"></ListPreference>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/overlays" android:key="visible_overlays">
        <CheckBoxPreference android:key="over_arm" android:defaultValue="false" android:summary="@string/over_arm_summary" android:title="@string/over_arm_title"></CheckBoxPreference>
        <CheckBoxPreference android:key="over_pos" android:defaultValue="false" android:summary="@string/over_pos_summary" android:title="@string/over_pos_title"></CheckBoxPreference>
        <CheckBoxPreference android:key="over_ca" android:defaultValue="false" android:summary="@string/over_ca_summary" android:title="@string/over_ca_title"></CheckBoxPreference>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/feedback" android:key="feedback_options">
        <Preference android:title="@string/feedback_android_developer" android:key="provider_feedback"/>
    </PreferenceCategory>
    
</PreferenceScreen> 
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
