<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="center_horizontal">
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_margin="5dip" android:textSize="20dip" android:text="@string/location_provider_menu_desc" ></TextView>
<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_margin="5dip">

<Button
    android:id="@+id/lp_cancel_button"
    android:layout_width="130dip"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:text="@string/common_cancelb" >
</Button>    

<Button
    android:id="@+id/lp_sett_button"
    android:layout_width="130dip"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:text="@string/location_provider_menu_settb" >
</Button>

</LinearLayout>
</LinearLayout>
